# gg-script-codex

./: .gitignore  README.md  VSM_dd_no_dup.tsv  VSM_dd_no_dup_log.json  figure1_pipeline_config.json  figure1_pipeline_config_2026_03_24.json  plot_vsm_results.py  pyproject.toml  resources.json
.cursor/rules/: readme-sync.mdc
biostat_cli/: __init__.py  cli.py  cli_parallel.py  config.py  figure1_pipeline.py  io.py  types.py  utils.py
biostat_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
biostat_cli/evaluators/: base.py  gene.py  variant.py
biostat_cli/pipeline/: __init__.py  compute.py  config.py  panel.py  plot.py
biostat_cli/stats/: binary.py  continuous.py  factory.py
tests/: test_evaluator_masks.py  test_stats.py
